# Tapdancer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
scripts/bash/: copy_vst3.sh
scripts/python/: LogDumper.py
source/: ChronosEditor.cpp  ChronosEditor.h  ChronosProcessor.cpp  ChronosProcessor.h  Converters.h  Globals.h  Includes.h  Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Protect.h  Smoother.h  includes.h
source/DSP/: BaseProcessor.h  ProcessBlock.h
source/DSP/Delay/: Interpolator.h  Lagrange5th.h
source/Utils/: SIMDUtils.h  SampleTypeHelpers.h  xSIMD.h
source/dsp/: BiquadEngine.h  DelayEngine.h  Engine.h  HadamardFDN.h  Interpolator.h  ProcessBlock.h  QCalc.h
source/dsp/engine/delay/: delay_engine.h  digital_engine.h
source/dsp/math/: fastermath.h
source/utils/: UnitConverter.h
source/utils/helpers/: overload.h  temposync.h
tests/: CMakeLists.txt  tests.cpp  tests.h
tests/perf_harness/: CMakeLists.txt  perf_cos_test.cpp  perf_delay_engine_test.cpp  perf_sin_test.cpp  visualize_cos_perf.py  visualize_sin_perf.py  viz_delay_perf.py
tests/perf_harness/logs/: delay_perf.csv  perf_cos_results.csv  perf_sin_results.csv
tests/simd_harness/: CMakeLists.txt  simd_alignment_delay_test.cpp  simd_alignment_math_test.cpp  simd_cos_test.cpp  simd_delay_engine_test.cpp  simd_sin_test.cpp  simd_tan_test.cpp  simd_tanh_test.cpp  simd_test.cpp  visualize_cos_error.py  visualize_error.py  visualize_sin_error.py  viz_delay_alignment.py  viz_math_alignment.py  viz_matplotlib.py
tests/simd_harness/logs/: simd_alignment_delay.csv  simd_alignment_math.csv  simd_cos_results.csv  simd_delay_data.csv  simd_results.csv  simd_sin_results.csv  simd_tan_results.csv  simd_tanh_results.csv
